Fixed copy and align title and description to the left

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: $content-padding;
   margin: $content-padding-vw;
   margin-bottom: $bottom-header / 2;
@@ -37,7 +37,7 @@
     font-size: 1.8rem;
     line-height: 1.5;
     color: $gray-light-4;
-    text-align: center;
+    text-align: left;
     margin: 0;
   }
 
