--- a/src/components/Photos/index.module.scss
+++ b/src/components/Photos/index.module.scss
@@ -5,6 +5,5 @@
   font-size: 1em;
   line-height: 1.8;
   color: $gray-light-4;
-  text-align: center;
   margin: 0;
 }
