--- a/src/components/VideoBook/index.module.scss
+++ b/src/components/VideoBook/index.module.scss
@@ -3,13 +3,13 @@
 
 .videobook {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   margin-bottom: 200px;
+  max-width: 800px;
   .videoWrapper {
     width: 100%;
-    max-width: 800px;
     position: relative;
-    padding: 56.25% 0 0 0;
+    padding-bottom: calc(9/16*100%);
     iframe {
       position: absolute;
       top: 0;
